...
                                        .font(.headline)
                                        .foregroundColor(.white)
                                        .padding()
                                        .background(Color(AppColors.main))
                                        .cornerRadius(12)
                                }
                                .accessibilityIdentifier("addToCart_button")
                                .transition(.opacity.combined(with: .scale))
                            }
                        }
                        .animation(.easeInOut, value: isShowingConfirmation)
                    }
                    .padding(.horizontal)
...
